--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -28,3 +28,43 @@
     journal={Preprint at arXiv:1602.08610},
     year={2016}
 }
+
+@inproceedings{garofalakis:2000-kdd,
+ author = {Garofalakis, Minos and Hyun, Dongjoon and Rastogi, Rajeev and Shim, Kyuseok},
+ title = {Efficient Algorithms for Constructing Decision Trees with Constraints},
+ booktitle = {Proceedings of the Sixth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+ series = {KDD '00},
+ year = {2000},
+ location = {Boston, Massachusetts, USA},
+ pages = {335--339},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+}
+
+@article{garofalakis:2000-sigkdd,
+ author = {Garofalakis, Minos and Rastogi, Rajeev},
+ title = {Scalable Data Mining with Model Constraints},
+ journal = {ACM SIGKDD Explorations Newsletter},
+ issue_date = {Dec. 2000},
+ volume = {2},
+ number = {2},
+ month = dec,
+ year = {2000},
+ pages = {39--48},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+}
+
+@article{garofalakis:2003,
+ author = {Garofalakis, Minos and Hyun, Dongjoon and Rastogi, Rajeev and Shim, Kyuseok},
+ title = {Building Decision Trees with Constraints},
+ journal = {Data Mining Knowledge Discovery},
+ issue_date = {April 2003},
+ volume = {7},
+ number = {2},
+ month = apr,
+ year = {2003},
+ pages = {187--214},
+ publisher = {Kluwer Academic Publishers},
+ address = {Hingham, MA, USA}
+}
