ELA note that needs to be cleared up

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -174,7 +174,9 @@ Let~$\RL_{<A}$ and~$\RL_{>A}$ refer to the portions of~$\RL$
 Notice that~$\RL_{<A}$ behaves the same as~$\RL_{<A}^*$,
 but~$\RL_{>A}$ may behave differently from~$\RL_{>A}^*$.
 %
-% ELA is confused about \ell(\RL_{>A}) compared to \ell(\RL_{>A}^*)
+% ELA is confused about \ell(\RL_{>A}) compared to \ell(\RL_{>A}^*).
+% Had previously written: "Note that in this context, all rules "after R" capture
+% at least the same data they captured before, and thus misclassify the same data." (email 7/22)
 %
 The worst possible loss~$\ell(\RL)$ would occur if all the data captured by~$A$,
 in the context of~$\RL^*$, were now misclassified by~$\RL_{>A}$.
