--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -22,6 +22,7 @@
 \def\RL{{\mathcal R}}
 \def\N{{\mathcal N}}
 \def\Prefix{{\mathcal P}}
+\def\RuleSet{{\mathcal S}}
 \newcommand{\x}{\mathbf{x}}
 \newcommand{\y}{\mathbf{y}}
 
